--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
 <body>
     <h1>hello from git</h1>
     <p>gamal ramadan</p>
+    <ul>
+        <li>html</li>
+        <li>css</li>
+        <li>js</li>
+    </ul>
     </body>
 </html>
